<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ADD MONEY"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="18dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <ImageView
                android:id="@+id/imgcancel"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/cancel4"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:tint="@color/black"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/Rs"
                    android:gravity="bottom"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>




                    <EditText
                        android:id="@+id/editamount"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="0dp"
                        android:hint="Enter Amount"
                        android:inputType="phone"
                        android:background="@android:color/transparent"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textSize="18dp" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginTop="5dp"/>


        </LinearLayout>


        <TextView
            android:id="@+id/textwalletsubmit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="ADD MONEY"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="5dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/borderblack"
            android:layout_marginTop="30dp"
            android:textSize="14dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/text100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Rs100"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="5dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/borderblack"
                android:layout_weight="1"
                android:textSize="14dp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/text200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Rs200"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="5dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/borderblack"
                android:textSize="14dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/text500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Rs500"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="5dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/borderblack"
                android:layout_weight="1"
                android:textSize="14dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
