<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.glory.apk.Activity.AddMoneyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/borderlogin"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewprofile"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="left"
                android:src="@mipmap/ic_launcher_icon_round" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:padding="10dp"
                android:text="ADD MONEY"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="18dp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="bottom"
                    android:text="@string/Rs"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/editamount"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:background="@android:color/transparent"
                    android:hint="Enter Amount"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textSize="18dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/black" />


        </LinearLayout>


        <TextView
            android:id="@+id/textwalletsubmit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/borderblack"
            android:gravity="center"
            android:padding="5dp"
            android:text="ADD MONEY"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/borderblack"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Rs100"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/text200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/borderblack"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Rs200"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/text500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/borderblack"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Rs500"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:drawableLeft="@drawable/ic_info_black"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="For Netbanking minimum deposit amount is \n\u20B9 25.00"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13dp" />


    </LinearLayout>

</LinearLayout>